force-app/main/default/objects/Competidor_de_la_oportunidad__c/Competidor_de_la_oportunidad__c.object-meta.xml
<CustomObject>
    <description>Relaciona una oportunidad con un competidor.</description>
    <label>Competidor de la oportunidad</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competidores de la oportunidad</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>