force-app/main/default/objects/Competidor_de_la_oportunidad__c/fields/Competidor__c.field-meta.xml
<CustomField>
    <fullName>Competidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competidor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Debe ser una cuenta de tipo Competidor.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competidor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competidores de la oportunidad</relationshipLabel>
    <relationshipName>Competidores_de_la_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>