force-app/main/default/objects/Competidor_de_la_oportunidad__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competidores de la oportunidad</relationshipLabel>
    <relationshipName>Competidores_de_la_oportunidad</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>