force-app/main/default/objects/Competidor_de_la_oportunidad__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <label>Unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>€ / botella</fullName>
            </value>
            <value>
                <fullName>€ / kg</fullName>
            </value>
            <value>
                <fullName>€ / kWh</fullName>
            </value>
            <value>
                <fullName>€ / litro</fullName>
            </value>
            <value>
                <fullName>€ / MWh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>